<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imgLogo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_description"
        android:padding="20dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/text_presentation"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box_ethanol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_ethanol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textHint_ethanol"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box_gasoline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_gasoline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textHint_gasoline"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:insetLeft="64dp"
        android:insetTop="20dp"
        android:insetRight="64dp"
        android:insetBottom="20dp"
        android:onClick="calc"
        android:text="@string/text_buttonSubmit"
        android:textSize="18sp"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:insetLeft="64dp"
        android:insetTop="20dp"
        android:insetRight="64dp"
        android:insetBottom="20dp"
        android:onClick="clear"
        android:text="@string/text_buttonClear"
        android:textSize="18sp"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>